stylesheet.css
* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
    border: none;
}

body {
    display: grid;
    gap: 0px;
    grid-template-rows: 20% 70% 10%;
    grid-template-columns: 20% 60% 20%;
    height: 100vh;
    width: 100vw;
    padding: 0px;
    background-color: whitesmoke;
}

header {
    grid-area: 1/1/span 1/span 3;
    margin: 0px 2px 2px 2px;
    display: grid;
    gap: 0px;
    background-color: lightpink;
    grid-template-rows: 33% 33% 33%;
    grid-template-columns: 25% 25% 25% 25%;
}

section {
    display: flex;
    justify-content: center;
    align-content: center;
    margin: 2px;
}

article {

}

address {
    
}

figure {

}

footer {
    display: flex;
    grid-area: 3/2/span 1/span 2;
    background-color: lightgreen;
    justify-content: center;
    align-content: center;
    margin: 2px;
}

/*CONTACT SECTION*/
#contactadd {
    grid-area: 2/1/span 2/span 1;
    background-color: lightblue;
    margin: 2px;
    display: grid;
    gap: 2px;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(8, 1fr);
}

#contactadd_aboutme {
    grid-area: 1/1/span 4/span 2; 
    background-color: lightgoldenrodyellow;
    margin: 2px;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: 20% 80%;
}

#contactadd_title {
    grid-area: 1/1/span 1/span 1;
    background-color: transparent;
    margin: 2px;
    justify-self: center;
    align-content: center;
}

#contactadd_aboutauthor {
    grid-area: 2/1/span 1/span 1;
    background-color: transparent;
    margin: 2px;
    justify-self: center;
    align-content: flex-start;
}

#contactadd_buttons {
    grid-area: 5/1/span 4/span 2;
    background-color: lightgoldenrodyellow;
    margin: 2px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(4, 1fr);
    padding: 2px;
}

/*BLOG SECTION*/
#blogpost {
    grid-area: 2/2/span 1/span 1;
    background-color: lightcoral;
    display: block; /*child elements unsqueezed*/
    overflow-x: hidden;
    direction: rtl; /*scrollbar on the left*/
    position: relative;
    overflow-y: scroll;
}

#blogpost_wrapper {
    display: flex;
    flex-direction: column;
    width: 100%;
    overflow-x: hidden;
    height: auto;
    direction: ltr;
}

.blogpost_grid { /*this is used to make the blogpost posts*/
    width: 100%;
    height: auto;
    background-color: lightblue;
    margin: 2px 2px 0px 3px;
    display: grid;
    gap: 0px;
    grid-template-columns: 30% 50% 20%;
    grid-template-rows: auto auto auto;
}

.blogpost_date { /*date*/
    grid-area: 1/1/span 1/span 1;
}

.blogpost_title { /*title*/
    grid-area: 1/2/span 1/span 2;
}

.blogpost_summary { /*summary*/
    grid-area: 2/1/span 2/span 1;
}

.blogpost_content { /*content*/
    grid-area: 2/2/span 2/span 1;
}

.blogpost_gallery { /*gallery*/
    grid-area: 2/3/span 2/span 1;
}

/*ILLUSTRATION AND MODAL SECTION*/
#illmod {
    grid-area: 2/3/span 1/span 1;
    background-color: lightgray;
    display: block;
    overflow-x: hidden;
    overflow-y: hidden;
}

.illbox {
    margin: 5px;
    border: 1px solid black;
    padding: 0px;
    width: 90%;
    height: auto;
    display: grid;
    grid-template-rows: 80% 20%;
    grid-template-columns: 100%;
}

.small_gallery_picture {
    grid-area: 1/1/span 1/span 1;
    width: 100%;
    height: auto;
    min-height: 80px;
}

.small_gallery_text {
    grid-area: 2/1/span 1/span 1;
    /*centered*/
    /*color black?*/
    width: auto;
    height: auto;
    min-height: 20px;
}

/*HEADER INTRO SECTION*/
#head_title {
    grid-area: 1/1/span 2/span 4;
    background-color: transparent;
    justify-self: center;
    align-content: center;
    margin: 4px;
}

#head_intro {
    grid-area: 3/2/span 1/span 2;
    background-color: transparent;
    justify-self: center;
    align-content: center;
    margin: 2px;
}

#lang_but {
    grid-area:3/4/span 1/span 1; 
    align-content: flex-end;
    margin-bottom: 10px;
    justify-self: center;
    background-color: transparent;
}

/*BUTTONS*/

#lang_no {
    background-color: transparent;
}

#lang_en {
    background-color: transparent;
}

#tohomepage_but {
    grid-area: 1/1/span 1/span 2;
    margin: 2px, 5px;
    border: none;
    background-color: transparent;
}

#togit_but {
    grid-area: 2/1/span 1/span 1;
    margin: 2px;
    border: none;
    background-color: transparent;
}

#toitchio_but {
    grid-area: 2/2/span 1/span 1;
    margin: 2px;
    border: none;
    background-color: transparent;
}

#tosketchfab_but {
    grid-area: 3/1/span 1/span 1;
    margin: 2px;
    border: none;
    background-color: transparent;
}

#toartportfolio_but {
    grid-area: 3/2/span 1/span 1;
    margin: 2px;
    border: none;
    background-color: transparent;
}

